fixing a typo in asyncResponseInterceptor

--- a/libraries/native/ApiClient.mustache
+++ b/libraries/native/ApiClient.mustache
@@ -180,7 +180,7 @@ public class ApiClient {
     readTimeout = null;
     connectTimeout = null;
     responseInterceptor = null;
-    syncResponseInterceptor = null;
+    asyncResponseInterceptor = null;
    }
   /**
    * Create an instance of ApiClient.
