--- a/libraries/native/pom.mustache
+++ b/libraries/native/pom.mustache
@@ -103,6 +103,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <failOnError>false</failOnError>
                 </configuration>
             </plugin>
             <plugin>
