Refactoring pom.mustache file to reflect to exosacle, updating groupId, artifactId, version, name, URL, SCM configuration, and developer information, these changes later will help the developers to pull and use exoscale4j SK from any java project.

--- a/libraries/native/pom.mustache
+++ b/libraries/native/pom.mustache
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>{{groupId}}</groupId>
-    <artifactId>{{artifactId}}</artifactId>
+    <groupId>com.exoscale</groupId>
+    <artifactId>exoscale4j</artifactId>
     <packaging>jar</packaging>
-    <name>{{artifactId}}</name>
-    <version>{{artifactVersion}}</version>
-    <url>{{artifactUrl}}</url>
-    <description>{{artifactDescription}}</description>
+    <name>Exoscale Java SDK</name>
+    <version>1.0.0</version>
+    <url>https://github.com/exoscale/exoscale4j</url>
+    <description>Java SDK for interacting with Exoscale cloud services.</description>
     <scm>
-        <connection>{{scmConnection}}</connection>
-        <developerConnection>{{scmDeveloperConnection}}</developerConnection>
-        <url>{{scmUrl}}</url>
+        <connection>scm:git:git://github.com/exoscale/exoscale4j.git</connection>
+        <developerConnection>scm:git:ssh://github.com/exoscale/exoscale4j.git</developerConnection>
+        <url>https://github.com/exoscale/exoscale4j</url>
     </scm>
 {{#parentOverridden}}
     <parent>
@@ -31,10 +31,10 @@
 
     <developers>
         <developer>
-            <name>{{developerName}}</name>
-            <email>{{developerEmail}}</email>
-            <organization>{{developerOrganization}}</organization>
-            <organizationUrl>{{developerOrganizationUrl}}</organizationUrl>
+            <name>Giza</name>
+            <email>giza@exoscale.ch</email>
+            <organization>Exoscale</organization>
+            <organizationUrl>https://www.exoscale.com</organizationUrl>
         </developer>
     </developers>
 
