Adding workaround to test exoscale4 in java projects, until we push the code to maven repository.

--- a/libraries/native/pom.mustache
+++ b/libraries/native/pom.mustache
@@ -40,6 +40,22 @@
 
     <build>
         <plugins>
+            <plugin> <!--        workaround to test exoscale4 in java projects, until we push the code to maven repository-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -208,6 +224,7 @@
     </profiles>
 
     <dependencies>
+
         {{#swagger1AnnotationLibrary}}
         <dependency>
             <groupId>io.swagger</groupId>
