--- a/libraries/native/api.mustache
+++ b/libraries/native/api.mustache
@@ -1,6 +1,6 @@
 {{>licenseInfo}}
 package {{package}};
-import org.openapitools.client.*;
+import com.exoscale.exoscale4j.client.*;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import {{invokerPackage}}.ApiClient;
 import {{invokerPackage}}.ApiException;
