--- a/libraries/native/travis.mustache
+++ b/libraries/native/travis.mustache
@@ -6,7 +6,7 @@ jdk:
   - oraclejdk11
 before_install:
   # ensure gradlew has proper permission
-  - chmod a+x ./gradlew
+  #- chmod a+x ./gradlew
 script:
   # test using maven
   - mvn test
