--- a/generator/libraries/native/api.mustache
+++ b/generator/libraries/native/api.mustache
@@ -452,7 +452,12 @@ public class {{classname}} {
     localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.ofString({{paramName}}));
     {{/isString}}
     {{^isString}}
-      localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.ofString(requestBody));
+    try {
+      byte[] localVarPostBody = memberVarObjectMapper.writeValueAsBytes({{paramName}});
+      localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.ofByteArray(localVarPostBody));
+    } catch (IOException e) {
+      throw new ApiException(e);
+    }
     {{/isString}}
     {{/bodyParam}}
     {{^bodyParam}}
