--- a/generator/libraries/native/README.mustache
+++ b/generator/libraries/native/README.mustache
@@ -37,9 +37,9 @@ Maven users can simply add the below dependency to their `pom.xml` :
 
 ```xml
 <dependency>
-    <groupId>com.exoscale</groupId>
-    <artifactId>exoscale4j</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <groupId>{{groupId}}</groupId>
+    <artifactId>{{artifactId}}</artifactId>
+    <version>{{artifactVersion}}</version>
     <scope>compile</scope>
 </dependency>
 ```
@@ -54,8 +54,9 @@ url "url_to_your_maven_repository"
 }
 }
 
+
 dependencies {
-implementation 'com.exoscale:exoscale4j:1.0.0-SNAPSHOT'
+implementation '{{groupId}}:{{artifactId}}:{{artifactVersion}}'
 }
 ```
 
@@ -68,7 +69,7 @@ mvn clean package
 
 Then manually install the following JARs:
 
-- target/exoscale4j-1.0.0-SNAPSHOT.jar
+- target/{{artifactId}}-{{artifactVersion}}.jar
 - target/lib/*.jar
 
 ## Getting Started
