--- a/generator/libraries/native/README.mustache
+++ b/generator/libraries/native/README.mustache
@@ -15,8 +15,7 @@ Infrastructure automation API, allowing programmatic access to all Exoscale prod
 
 The [OpenAPI Specification](http://spec.openapis.org/oas/v3.0.3.html) source of this documentation can be obtained here:
 
-* [JSON format](https://openapi-v2.exoscale.com/source.json)
-* [YAML format](https://openapi-v2.exoscale.com/source.yaml)
+* [JSON format](https://api-ch-gva-2.exoscale.com/v2/openapi.json)
 
 
 ## Requirements
